# libmusic

./: .gitignore  CMakeLists.txt  Doxyfile.in  INSTALL  README
cmake/modules/: FindMpg123.cmake  FindMusic.cmake  FindMusicaccess.cmake  FindSQLITE3.cmake  FindSRC.cmake  FindSndfile.cmake  FindVorbisfile.cmake  Toolchain-BB10-armv7.cmake  Toolchain-QNX-6.5.0-armv7.cmake
src/: main.cpp  main.hpp  music.hpp
src/kissfft/: kiss_fft.h
src/music/: constantq.cpp  constantq.hpp  fft.cpp  fft.hpp
src/music/classification/: category.cpp  category.hpp  classificationcategory.cpp  classificationcategory.hpp  classificationprocessor.cpp  classificationprocessor.hpp  classifier.cpp  classifier.hpp  gaussian_oneclass.cpp  gaussian_oneclass.hpp  lda_fisher.cpp  lda_fisher.hpp
src/music/classification/gmm/: gaussian.cpp  gaussian.hpp  gmm.cpp  gmm.hpp  kmeans.cpp  kmeans.hpp
src/music/database/: databaseconnection.cpp  databaseconnection.hpp  databaseentities.cpp  databaseentities.hpp  sqlitedatabaseconnection.cpp  sqlitedatabaseconnection.hpp
src/music/feature_extraction/: bpm.cpp  bpm.hpp  chords.cpp  chords.hpp  chroma.cpp  chroma.hpp  dynamic_range.cpp  dynamic_range.hpp  feature_extraction_helper.cpp  feature_extraction_helper.hpp  preprocessor.cpp  preprocessor.hpp  timbre.cpp  timbre.hpp
src/music/transformations/: constantq.hpp  dct.hpp  fft.cpp  fft.hpp
src/music/transforms/: constantq.cpp  constantq.hpp  dct.cpp  dct.hpp  fft.cpp  fft.hpp
src/music/uihelper/: progress_callback.cpp  progress_callback.hpp
src/musicaccess/: filter.cpp  filter.hpp  resample.cpp  resample.hpp  soundfile.cpp  soundfile.hpp
src/tests/: debug.cpp  debug.hpp  main.cpp  main.hpp  testframework.cpp  testframework.hpp  tests.cpp  tests.hpp  tests_classifier.cpp  tests_classifier.hpp  tests_database.cpp  tests_database.hpp  tests_feature_extraction.cpp  tests_feature_extraction.hpp  tests_performance.cpp  tests_performance.hpp
src/tools/: console_colors.cpp  console_colors.hpp  filesystem.cpp  filesystem.hpp  matrixhelper.cpp  matrixhelper.hpp  pthread.cpp  pthread.hpp  randomnumbers.cpp  randomnumbers.hpp  stringhelper.cpp  stringhelper.hpp  tuple.hpp
src/tools/jsoncpp/: jsoncpp.cpp
testdata/: README
